finalized module 1 and data loading

--- a/python_tutorial/module1.ipynb
+++ b/python_tutorial/module1.ipynb
@@ -27,20 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'BLAHBLAH'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# FOR EXAMPLE\n",
     "\"BLAHBLAH\""
@@ -48,23 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OUR ORIGINAL STRING: BLAH\n",
-      "FIRST CHAR VARIABLE VALUE: B\n",
-      "we can also change our pointer to something completely different.\n",
-      "FIRST CHAR VARIABLE VALUE: 100\n",
-      "but our original string stays the same: BLAH\n",
-      "or maybe i want to change my original string:\n",
-      "OUR ORIGINAL STRING: blah\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "our_original_string = \"BLAH\"\n",
     "print(\"OUR ORIGINAL STRING:\", our_original_string)\n",
@@ -101,20 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(our_original_string)"
    ]
@@ -148,47 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(first_char)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'100'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# we can also change the type of objects\n",
     "first_char_string = str(first_char) # changes the value of first char from an integer to a string\n",
@@ -233,20 +168,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'a'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# INDEXING A STRING\n",
     "i = 0  # TODO FOR YOU: change i and run the code to see how it affects the cell output\n",
@@ -256,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,20 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "example_empty_list = []\n",
     "example_empty_list"
@@ -319,20 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 'a', 'b']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "example_simple_list = [1, 2, 'a', 'b']\n",
@@ -341,20 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['  AbCdEfGG      ']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "example_simple_list2 = [test_string_2]\n",
@@ -363,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,17 +335,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RESULT SHOULD BE 2. addition = Ellipsis\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# try 1 + 1\n",
     "addition = ...\n",
@@ -471,20 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ab'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#string concatenation using \"+\" operator\n",
     " \n",
@@ -493,20 +365,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# list extension using \"+ operator\"\n",
     "\n",
@@ -515,17 +376,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RESULT SHOULD BE -19. subtraction = Ellipsis\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# try 10-29\n",
     "\n",
@@ -535,17 +388,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RESULT SHOULD BE 12. multiplication = Ellipsis\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# try 3*2*2\n",
     "multiplication = ...\n",
@@ -554,18 +399,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "result should be 1.5. regular_divide =  Ellipsis\n",
-      "result should be 1. floor_divide = Ellipsis\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# try divide.\n",
     "\n",
@@ -580,21 +416,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for ** or pow(): 'ellipsis' and 'ellipsis'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m base \u001b[39m=\u001b[39m \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\n\u001b[1;32m      8\u001b[0m power \u001b[39m=\u001b[39m \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\n\u001b[0;32m---> 10\u001b[0m math_power \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mpower(base, power)\n\u001b[1;32m     12\u001b[0m \u001b[39mprint\u001b[39m(starstar_power, math_power)\n\u001b[1;32m     13\u001b[0m \u001b[39massert\u001b[39;00m starstar_power \u001b[39m==\u001b[39m math_power\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for ** or pow(): 'ellipsis' and 'ellipsis'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# power\n",
     "\n",
@@ -626,18 +450,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['unread', 'unread', 'unread', 'unread', 'unread']"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "email_data = ['unread'] * 5 # a list of 5 unread emails\n",
     "email_data"
@@ -656,18 +469,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['read', 'read', 'read', 'read', 'read']"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "email_data_2 = email_data.copy()\n",
     "email_data_2[0] = 'read'\n",
@@ -722,18 +524,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['read', 'unread', 'unread', 'unread', 'unread']"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mark_read(0)\n",
     "email_data"
@@ -743,18 +534,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['read', 'read', 'read', 'read', 'read']"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mark_all_read(email_data)"
    ]
@@ -832,18 +612,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['unread', 'unread', 'unread', 'unread', 'unread']"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mark_opposite(email_data)"
    ]
@@ -852,18 +621,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['unread', 'read', 'unread', 'unread', 'unread']"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mark_read(1)\n",
     "email_data"
@@ -873,18 +631,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['read', 'unread', 'read', 'read', 'read']"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mark_opposite(email_data)"
    ]
@@ -900,15 +647,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jiyoo, I don't know who you are!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myFirstName = 'Jiyoo' # enter in your name.\n",
     "\n",
@@ -937,15 +676,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jiyoo, I don't know who you are!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ONE WAY:::\n",
     "myFirstName = \"Jiyoo\"\n",
@@ -985,20 +716,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iteration 0 : {'doug': 'parada'}\n",
-      "iteration 1 : {'doug': 'parada', 'kelly': 'zhen'}\n",
-      "iteration 2 : {'doug': 'parada', 'kelly': 'zhen', 'krishna': 'parekh'}\n",
-      "iteration 3 : {'doug': 'parada', 'kelly': 'zhen', 'krishna': 'parekh', 'clara': 'mangali'}\n",
-      "iteration 4 : {'doug': 'parada', 'kelly': 'zhen', 'krishna': 'parekh', 'clara': 'mangali', 'jiyoo': 'jeong'}\n",
-      "iteration 5 : {'doug': 'parada', 'kelly': 'zhen', 'krishna': 'parekh', 'clara': 'mangali', 'jiyoo': 'jeong', 'victoria': 'robinson'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "first_names = ['doug', 'kelly', 'krishna', 'clara', 'jiyoo', 'victoria']\n",
@@ -1019,16 +737,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "keys: dict_keys(['doug', 'kelly', 'krishna', 'clara', 'jiyoo', 'victoria'])\n",
-      "my last name is jeong\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "myFirstName = \"Jiyoo\"\n",
@@ -1053,15 +762,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('doug', 'parada'), ('kelly', 'zhen'), ('krishna', 'parekh'), ('clara', 'mangali'), ('jiyoo', 'jeong'), ('victoria', 'robinson')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fnln_zip = zip(first_names, last_names)\n",
     "print(list(fnln_zip))"
@@ -1071,23 +772,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'doug': 'parada',\n",
-       " 'kelly': 'zhen',\n",
-       " 'krishna': 'parekh',\n",
-       " 'clara': 'mangali',\n",
-       " 'jiyoo': 'jeong',\n",
-       " 'victoria': 'robinson'}"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dict(fnln_zip)"
    ]
@@ -1114,6 +799,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1126,7 +812,6 @@
     "(crudely) we'll consider an email spam if ANY OF THE FOLLOWING IS TRUE:\n",
     "- the subject has any numbers or symbols. -- see the 're' library\n",
     "- the subject has more than 100 characters.\n",
-    "- the subject any typos (spellcheck using spellchecker library.) https://towardsdatascience.com/textblob-spelling-correction-46321fc7f8b8 \n",
     "- the email address is from outside @berkeley.edu\n",
     "\n",
     "If the above is true, we will consider it 70% possibility that it is a spam email.\n",
@@ -1147,12 +832,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "!{sys.executable} - m pip install spellchecker\n",
-    "!{sys.executable} - m pip install pickle\n",
-    "\n",
-    "from spellchecker import SpellChecker # helps spellcheck.\n",
-    "import pickle # packaging library for the data :)\n",
-    "seed(123) # this sets the randomness to a fixed sequence of randomness (*ask me if ur curious)"
+    "# from spellchecker import SpellChecker # helps spellcheck.\n",
+    "import pickle # packaging library for the data :)\n"
    ]
   },
   {
@@ -1165,7 +846,10 @@
     "\n",
     "#This is a LIST of dictionaries with the same keys:\n",
     "#ie... [{email data 1}, {email data 2}, {email data 3}, ... etc.]\n",
-    "# each email data looks like: {'email':___, 'subject':____}"
+    "# each email data looks like: {'email':___, 'subject':____}\n",
+    "\n",
+    "with open('email_data.pkl', 'rb') as file:\n",
+    "    inbox = pickle.load(file)"
    ]
   },
   {
@@ -1222,15 +906,9 @@
     "    elif ...: # the subject has more than 100 characters.\n",
     "        return True\n",
     "    \n",
-    "    # text blob set up\n",
-    "    spell = SpellChecker()\n",
-    "    misspelled = spell.unknown(...) # returns a list of typos in the string input.\n",
-    "    number_misspelled = len(...)\n",
-    "    if : # the subject any typos (spellcheck using textblob library.)\n",
+    "    if ... : # the email address is from outside @berkeley.edu\n",
     "        return True\n",
-    "    elif ... : # the email address is from outside @berkeley.edu\n",
-    "        return True\n",
-    "    else:\n",
+    "    else: # is probably not spam as it doesn't hit all of the qualifications for a spam email.\n",
     "        return False\n",
     "    \n",
     "     "
@@ -1251,23 +929,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(123) # this sets the randomness to a fixed sequence of randomness (*ask me if ur curious)\n",
+    "\n",
+    "\n",
     "status = []\n",
     "for email in inbox: # for every email in our list\n",
     "    if never_spam(...): # if it is never spam\n",
     "        status.append('good')# mark as good\n",
     "    elif maybe_spam(...):\n",
-    "        # use math.random to get a random decimal between 0 <= x < 1\n",
-    "        if math.random() <= .7:\n",
+    "        # use math.random() or random.random() to get a random decimal between 0 <= x < 1\n",
+    "        if random.random() <= ... : # with a probability of 70%\n",
     "            status.append('spam')\n",
     "        else:\n",
     "            status.append('good')\n",
     "    else:\n",
-    "        if math.random() <= .1:\n",
+    "        if ... <= .1 : # with a probability of 10%\n",
     "            status.append('spam')\n",
     "        else:\n",
     "            status.append('good')\n",
     "        \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(status)"
    ]
   }
  ],
