--- a/python_tutorial/module1.ipynb
+++ b/python_tutorial/module1.ipynb
@@ -925,11 +925,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random"
+    "import random # helps us randomize.\n",
+    "status = []"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we will use the above functions we coded to get the good vs. spam for every email. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "! Before continuing: try to write a psuedocode for what we want to see in our loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## WRITE YOUR PSUEDOCODE HERE:\n",
+    "\n",
+    "# and if you're lookin for a challenge - you can ignore the skeleton code I set up for you and instead write up your pseudocode !!!\n",
+    "\n"
    ]
   },
   {
@@ -938,11 +967,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# PROJECT SKELETON CODE: click on the blue bar on the left to expand:\n",
+    "\n",
     "random.seed(123) # this sets the randomness to a fixed sequence of randomness (*ask me if ur curious)\n",
     "\n",
-    "\n",
-    "status = []\n",
-    "for email in inbox: # for every email in our list\n",
+    "for email_dat in inbox: # for every email in our list\n",
     "    if never_spam(...): # if it is never spam\n",
     "        status.append('good')# mark as good\n",
     "    elif maybe_spam(...):\n",
