--- a/python_tutorial/module1.ipynb
+++ b/python_tutorial/module1.ipynb
@@ -15,6 +15,11 @@
     "\n",
     "Somewhere in computer memory, it holds this *instance* of \"BLAHBLAH\".\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "But how can we keep referring back to our original object that we created?\n",
     "\n",
     "Variables are also objects, but a special kind that are considered pointers. \n",
@@ -27,19 +32,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Blahbalh'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# FOR EXAMPLE\n",
-    "\"BLAHBLAH\""
+    "\"BLAHBLAH\"\n",
+    "'Blahbalh'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OUR ORIGINAL STRING: BLAH\n",
+      "FIRST CHAR VARIABLE VALUE: B\n",
+      "we can also change our pointer to something completely different.\n",
+      "FIRST CHAR VARIABLE VALUE: 100\n",
+      "but our original string stays the same: BLAH\n",
+      "or maybe i want to change my original string:\n",
+      "OUR ORIGINAL STRING: blah\n"
+     ]
+    }
+   ],
    "source": [
     "our_original_string = \"BLAH\"\n",
     "print(\"OUR ORIGINAL STRING:\", our_original_string)\n",
@@ -76,11 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "type(our_original_string)"
+    "type(our_original_string) # string\n",
+    "type(1.1) # float\n",
+    "type(1) # int"
    ]
   },
   {
@@ -121,14 +165,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'100'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# we can also change the type of objects\n",
     "first_char_string = str(first_char) # changes the value of first char from an integer to a string\n",
     "print(type(first_char_string))\n",
-    "first_char_string"
+    "first_char_string\n"
    ]
   },
   {
@@ -168,9 +230,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# INDEXING A STRING\n",
     "i = 0  # TODO FOR YOU: change i and run the code to see how it affects the cell output\n",
@@ -180,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,9 +295,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "example_empty_list = []\n",
     "example_empty_list"
@@ -232,9 +316,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 'a', 'b']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "example_simple_list = [1, 2, 'a', 'b']\n",
@@ -243,30 +338,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['  AbCdEfGG      ', 'abcdef']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
-    "example_simple_list2 = [test_string_2]\n",
+    "example_simple_list2 = [test_string_2, test_string]\n",
     "example_simple_list2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# COMMON LIST OPERATIONS\n",
     "\n",
-    "# length: len()\n",
+    "# length: len() \n",
     "# removing: pop(), remove()\n",
     "# ordering: reverse(), sort()\n",
     "# adding: append() vs extend()\n",
     "# accessing: using bracket indexing\n",
     "# updating: using bracket indexing\n",
-    "# max/min: max(), min()\n"
+    "# max/min: max(), min()\n",
+    "\n",
+    "result = len(example_simple_list)\n",
+    "print(result)"
    ]
   },
   {
@@ -278,19 +395,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "empty_dictionary = {}\n",
     "single_dictionary = {'id': 3004}\n",
+    "\n",
+    "\n",
     "simple_dictionary = {'id': 3004,\n",
     "                     'name': 'potato',\n",
     "                     'attributes': ['brown', 'small', 'yummy when fried']}\n",
+    "\n",
+    "\n",
     "simple_dictionary_2 = {1:100,\n",
     "                       2:200,\n",
     "                       3:300,\n",
     "                       4:400,}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['brown', 'small', 'yummy when fried']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simple_dictionary['attributes'] # dictionary[key] = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simple_dictionary_2[2]"
    ]
   },
   {
@@ -305,7 +466,8 @@
     "# inverse a dictionary using: \n",
     "# loop thruogh a dictionary using dictionary.iteritems()\n",
     "\n",
-    "# ** IMPORTANT RULE WITH DICTS ** you can't have two keys be identical in a dictionary. but you CAN have unique keys point to the same value.\n"
+    "# ** IMPORTANT RULE WITH DICTS ** you can't have two keys be identical in a dictionary. but you CAN have unique keys point to the same value.\n",
+    "\n"
    ]
   },
   {
@@ -335,12 +497,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RESULT SHOULD BE 2. addition = 2\n"
+     ]
+    }
+   ],
    "source": [
     "# try 1 + 1\n",
-    "addition = ...\n",
+    "addition = 1 + 1\n",
     "print('RESULT SHOULD BE 2. addition =', addition)\n",
     "\n"
    ]
@@ -354,9 +524,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ab'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#string concatenation using \"+\" operator\n",
     " \n",
@@ -365,9 +546,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# list extension using \"+ operator\"\n",
     "\n",
@@ -376,58 +568,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RESULT SHOULD BE -19. subtraction = -19\n"
+     ]
+    }
+   ],
    "source": [
     "# try 10-29\n",
     "\n",
-    "subtraction = ...\n",
+    "subtraction = 10-29\n",
     "print('RESULT SHOULD BE -19. subtraction =', subtraction)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RESULT SHOULD BE 12. multiplication = 12\n"
+     ]
+    }
+   ],
    "source": [
     "# try 3*2*2\n",
-    "multiplication = ...\n",
+    "multiplication = 3 * 2 * 2\n",
     "print('RESULT SHOULD BE 12. multiplication =', multiplication)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result should be 1.5. regular_divide =  1.5\n",
+      "result should be 1. floor_divide = 1\n"
+     ]
+    }
+   ],
    "source": [
     "# try divide.\n",
     "\n",
     "# first: try a regular divide 3/2\n",
-    "regular_divide = ...\n",
+    "regular_divide = 3/2\n",
     "print('result should be 1.5. regular_divide = ', regular_divide)\n",
     "\n",
     "# second: try a integer divide with two // marks (this rounds down to the nearest integer) \"3//2\"\n",
-    "floor_divide = ...\n",
+    "floor_divide = 3//2\n",
     "print('result should be 1. floor_divide =', floor_divide)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 100\n"
+     ]
+    }
+   ],
    "source": [
     "# power\n",
-    "\n",
+    "import numpy as np\n",
     "# first: regularly 10**2\n",
-    "starstar_power = ...\n",
+    "starstar_power = 10**2\n",
     "\n",
     "# second: example using math library. set base and power variables to pass the assertion below.\n",
-    "base = ...\n",
-    "power = ...\n",
+    "base = 10\n",
+    "power = 2\n",
     "\n",
     "math_power = np.power(base, power)\n",
     "\n",
@@ -561,10 +786,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## !Writing in pseudocode!\n",
+    "### !Writing in pseudocode!\n",
     "\n",
     "writing out functions in english words how you want to approach the solution is best practice!\n",
     "\n",
@@ -637,10 +863,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "if statements can be very powerful tools!!\n"
+    "**if statements can be very powerful tools!!**\n",
+    "\n"
    ]
   },
   {
@@ -792,6 +1020,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -925,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +1196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PROJECT SKELETON CODE: click on the blue bar on the left to expand:\n",
+    "# PROJECT SKELETON CODE: click on the bar on the left to expand:\n",
     "\n",
     "random.seed(123) # this sets the randomness to a fixed sequence of randomness (*ask me if ur curious)\n",
     "\n",
@@ -985,7 +1214,6 @@
     "            status.append('spam')\n",
     "        else:\n",
     "            status.append('good')\n",
-    "        \n",
     "        "
    ]
   },
@@ -1001,7 +1229,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1015,11 +1243,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "7812ea015bdcee6f23a998adcdd2ef97c151c0c241b7b7070987d9313e41299d"
    }
   }
  },
