--- a/python_tutorial/module1.ipynb
+++ b/python_tutorial/module1.ipynb
@@ -32,20 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Blahbalh'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# FOR EXAMPLE\n",
     "\"BLAHBLAH\"\n",
@@ -54,23 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OUR ORIGINAL STRING: BLAH\n",
-      "FIRST CHAR VARIABLE VALUE: B\n",
-      "we can also change our pointer to something completely different.\n",
-      "FIRST CHAR VARIABLE VALUE: 100\n",
-      "but our original string stays the same: BLAH\n",
-      "or maybe i want to change my original string:\n",
-      "OUR ORIGINAL STRING: blah\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "our_original_string = \"BLAH\"\n",
     "print(\"OUR ORIGINAL STRING:\", our_original_string)\n",
@@ -107,20 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(our_original_string) # string\n",
     "type(1.1) # float\n",
@@ -165,33 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'100'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# we can also change the type of objects\n",
     "first_char_string = str(first_char) # changes the value of first char from an integer to a string\n",
     "print(type(first_char_string))\n",
     "first_char_string\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -230,30 +183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'a'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# INDEXING A STRING\n",
-    "i = 0  # TODO FOR YOU: change i and run the code to see how it affects the cell output\n",
+    "i = 3  # TODO FOR YOU: change i and run the code to see how it affects the cell output\n",
     "test_string = 'abcdef'\n",
     "test_string[i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +208,8 @@
     "# replace a value in the string: replace()\n",
     "# count number of a substring: count()\n",
     "# length: len()\n",
-    "\n"
+    "\n",
+    "test_string_2.count(\"G\")\n"
    ]
   },
   {
@@ -295,20 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "example_empty_list = []\n",
     "example_empty_list"
@@ -316,20 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 'a', 'b']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "example_simple_list = [1, 2, 'a', 'b']\n",
@@ -338,20 +259,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['  AbCdEfGG      ', 'abcdef']"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "example_simple_list2 = [test_string_2, test_string]\n",
@@ -360,30 +270,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# COMMON LIST OPERATIONS\n",
+    "example_simple_list.pop(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_simple_list.remove('b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_simple_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# COMMON LIST OPERATIONS # for more information: https://www.geeksforgeeks.org/python-lists/\n",
     "\n",
-    "# length: len() \n",
+    "\n",
+    "# length: len(...) \n",
     "# removing: pop(), remove()\n",
     "# ordering: reverse(), sort()\n",
     "# adding: append() vs extend()\n",
     "# accessing: using bracket indexing\n",
     "# updating: using bracket indexing\n",
-    "# max/min: max(), min()\n",
-    "\n",
-    "result = len(example_simple_list)\n",
-    "print(result)"
+    "# max/min: max(), min()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(\"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_list = ['hi', 'my', 'name', 'is', 'jiyoo.']\n",
+    "# length should be 5\n",
+    "len(sample_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_list.remove(\"hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_list.pop(1)#index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_list[1] = 'liar'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_list"
    ]
   },
   {
@@ -395,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,40 +424,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['brown', 'small', 'yummy when fried']"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "simple_dictionary['attributes'] # dictionary[key] = value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "simple_dictionary['test'] = ['brown', 'small', 'yummy when fried']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simple_dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "simple_dictionary_2[2]"
    ]
@@ -466,8 +470,11 @@
     "# inverse a dictionary using: \n",
     "# loop thruogh a dictionary using dictionary.iteritems()\n",
     "\n",
-    "# ** IMPORTANT RULE WITH DICTS ** you can't have two keys be identical in a dictionary. but you CAN have unique keys point to the same value.\n",
-    "\n"
+    "# ** IMPORTANT RULE WITH DICTS ** you can't have two keys be identical in a dictionary. \n",
+    "# but you CAN have unique keys point to the same value. **\n",
+    "\n",
+    "\n",
+    "TODO: find a nice dictionary tutorial. "
    ]
   },
   {
@@ -488,6 +495,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# LOGICS\n",
+    "#> \n",
+    "#< \n",
+    "#== or 'is'\n",
+    "#!= or 'not is'\n",
+    "\n",
+    "# is this variable x pointing to (something)\n",
+    "x == 4\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "True and False and True and True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "True or False or False or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 5\n",
+    "y = 10\n",
+    "\n",
+    "x is y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np # import numpy library for some math functions \n",
     "import math\n",
     "\n",
@@ -497,17 +551,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RESULT SHOULD BE 2. addition = 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# try 1 + 1\n",
     "addition = 1 + 1\n",
@@ -524,20 +570,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ab'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#string concatenation using \"+\" operator\n",
     " \n",
@@ -546,20 +581,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4]"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# list extension using \"+ operator\"\n",
     "\n",
@@ -568,17 +592,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RESULT SHOULD BE -19. subtraction = -19\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# try 10-29\n",
     "\n",
@@ -588,17 +604,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RESULT SHOULD BE 12. multiplication = 12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# try 3*2*2\n",
     "multiplication = 3 * 2 * 2\n",
@@ -607,18 +615,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "result should be 1.5. regular_divide =  1.5\n",
-      "result should be 1. floor_divide = 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# try divide.\n",
     "\n",
@@ -633,17 +632,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100 100\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# power\n",
     "import numpy as np\n",
@@ -706,6 +697,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -739,6 +737,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "count = 0   \n",
+    "jiyoo = 'not_tired'\n",
+    "while jiyoo != 'tired':\n",
+    "    print('hey')\n",
+    "    if count == 5:\n",
+    "        break\n",
+    "    count = count + 1\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -763,6 +787,13 @@
    "source": [
     "mark_all_read(email_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -877,7 +908,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myFirstName = 'Jiyoo' # enter in your name.\n",
+    "if True:\n",
+    "    print('AH')\n",
+    "elif True:\n",
+    "    print('great')\n",
+    "else:\n",
+    "    print('broeaeafe')\n",
+    "\n",
+    "print('-------')\n",
+    "\n",
+    "if True:\n",
+    "    print('AH')\n",
+    "if True: \n",
+    "    print('great')\n",
+    "else:\n",
+    "    print('aejaefpa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myFirstName = \"Doug\" # enter in your name.\n",
     "\n",
     "if myFirstName.lower() == 'doug':\n",
     "    print('my last name is Parada.')\n",
@@ -889,6 +943,42 @@
     "    print('my last name is Mangali.')\n",
     "else:\n",
     "    print(myFirstName+', I don\\'t know who you are!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"Clara yesterday said \"something\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"Clara yesterday said 'something'\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Clara yesterday said \"something\"'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Clara yesterday said \\'something\\''"
    ]
   },
   {
@@ -907,9 +997,9 @@
    "outputs": [],
    "source": [
     "# ONE WAY:::\n",
-    "myFirstName = \"Jiyoo\"\n",
+    "myFirstName = \"DouG\"\n",
     "fn_lower = myFirstName.lower()\n",
-    "last_name = ''\n",
+    "last_name = '' \n",
     "if fn_lower == 'doug':\n",
     "    last_name = 'Parada'\n",
     "elif fn_lower == 'kelly': # THE ELIF! its a concatenation of the word else if\n",
@@ -953,7 +1043,7 @@
     "\n",
     "# lets fill the dictionary with our names:\n",
     "\n",
-    "for i in range(len(first_names)):\n",
+    "for i in range(len(first_names)): # 0 to 5\n",
     "    fn = first_names[i]\n",
     "    ln = last_names[i]\n",
     "    first_and_last[fn] = ln \n",
@@ -967,11 +1057,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#first_and_last['kelly']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "myFirstName = \"Jiyoo\"\n",
     "fn_lower = myFirstName.lower()\n",
     "keys = first_and_last.keys() # .keys() gives us the index values of the dictionary as a list.\n",
     "print('keys:', keys)\n",
+    "\n",
     "if fn_lower in first_and_last.keys(): \n",
     "    print(\"my last name is\", first_and_last[fn_lower])\n",
     "else:\n",
@@ -1002,7 +1102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict(fnln_zip)"
+    "dict(zip(first_names, last_names))"
    ]
   },
   {
@@ -1079,6 +1179,15 @@
     "\n",
     "with open('email_data.pkl', 'rb') as file:\n",
     "    inbox = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# play around with data here"
    ]
   },
   {
